# virtlinalg

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  test.yml
docs/: conf.py  index.rst
src/virtlinalg/: __init__.py  backends.py  diagonal.py  identity.py  matrices.py  np.py  scaled.py  torch.py
tests/integration/: test_lru.py
tests/unit/: __init__.py  backend_cases.py  test_diagonal.py  test_identity.py  test_low_rank.py  test_numpy.py  test_scaled.py  test_torch.py
virtlinalg/: __init__.py  identity.py  low_rank.py  matrices.py  np.py
