[project]
name = "virtlinalg"
version = "0.1.0"
description = "Virtual Linear Algebra"
authors = [
    {name = "Étienne Morice",email = "pro.emorice@mail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pylint>=3.3.7",
    "ruff>=0.11.13",
    "tox>=4.26.0",
]
testing = [
    "numpy>=2.3.0",
    "pytest>=8.4.0",
]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.12", "3.13"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
dependency_groups = ["testing"]
commands = [["pytest"]]
