[project]
name = "virtlinalg"
version = "0.1.0"
description = "Virtual Linear Algebra"
authors = [
    {name = "Étienne Morice",email = "pro.emorice@mail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12" # Limited by type parameter lists
dependencies = [
    "numpy>=2.1.2", # Downgraded to the latest version in pytorch index
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pylint>=3.3.7",
    "ruff>=0.11.13",
    "tox>=4.26.0",
]
testing = [
    "pytest>=8.4.0",
]
# Additional opt group required to test torch features
# If installing also instruct your installer to use index:
#    https://download.pytorch.org/whl/cpu
# when testing on a cpu platform.
testing_torch = [
    "torch>=2.7.1",
]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.13", "3.12", "torch"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
dependency_groups = ["testing"]
commands = [["pytest", "-k", "not torch"]]

[tool.tox.env.torch]
description = "Run Torch test under {base_python}"
set_env = { PIP_EXTRA_INDEX_URL = "{env:PIP_INDEX_URL:https://download.pytorch.org/whl/cpu}" }
dependency_groups = ["testing", "testing_torch"]
commands = [["pytest"]]

[tool.uv]
default-groups = ["dev", "testing"]
